--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/movie-display.css">
+    <link rel="stylesheet" href="../styles/buttons.css">
     <title>Sitio de Pelicula</title>
 </head>
 <body>
