--- a/pages/index.html
+++ b/pages/index.html
@@ -26,7 +26,7 @@
         <button id="btnAnterior">Anterior</button>
         <button id="btnSiguiente">Siguiente</button>
     </div>
-
+<footer id="footer"></footer>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script type="module" src="../src/app.js"></script>
 
